# SlicerSimpleFilters

./: .gitignore  CMakeLists.txt  README.md
SimpleFilters/: CMakeLists.txt  SimpleFilters.py
SimpleFilters/Testing/Python/: CMakeLists.txt  SimpleFiltersModuleTest.py
Utilities/: JSONGenerateWikiDocs.py  UpdateFilterDescriptionsFromSimpleITK.sh
